[gd_scene load_steps=2 format=3 uid="uid://bqod7lohmpvix"]

[ext_resource type="Script" uid="uid://bhj0er4cx02kc" path="res://scripts/debug.gd" id="1_1uwqr"]

[node name="Debug" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1uwqr")

[node name="DEBUG" type="Label" parent="."]
layout_mode = 0
offset_left = 1566.9999
offset_top = 15.999999
offset_right = 1729.9999
offset_bottom = 39.00006
scale = Vector2(2.0656164, 2.0656164)
text = "DEBUG"
horizontal_alignment = 2

[node name="Frame" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ColorRect2" type="ColorRect" parent="Frame"]
layout_mode = 0
offset_right = 10.0
offset_bottom = 100.0

[node name="ColorRect3" type="ColorRect" parent="Frame"]
layout_mode = 0
offset_right = 100.0
offset_bottom = 10.0

[node name="ColorRect4" type="ColorRect" parent="Frame"]
layout_mode = 0
offset_top = 1078.0
offset_right = 10.000004
offset_bottom = 1178.0
rotation = -1.5707964

[node name="ColorRect5" type="ColorRect" parent="Frame"]
layout_mode = 0
offset_top = 1078.0
offset_right = 100.0
offset_bottom = 1088.0
rotation = -1.5707964

[node name="ColorRect6" type="ColorRect" parent="Frame"]
layout_mode = 0
offset_left = 1920.0
offset_top = 1080.0
offset_right = 1930.0
offset_bottom = 1180.0
rotation = -3.1415927

[node name="ColorRect7" type="ColorRect" parent="Frame"]
layout_mode = 0
offset_left = 1920.0
offset_top = 1080.0
offset_right = 2020.0
offset_bottom = 1090.0
rotation = -3.1415927

[node name="ColorRect8" type="ColorRect" parent="Frame"]
layout_mode = 0
offset_left = 1920.0
offset_right = 1930.0
offset_bottom = 100.0
rotation = -4.712389

[node name="ColorRect9" type="ColorRect" parent="Frame"]
layout_mode = 0
offset_left = 1920.0
offset_right = 2020.0
offset_bottom = 10.0
rotation = -4.712389

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="ColorRect" type="ColorRect" parent="MarginContainer"]
visible = false
layout_mode = 2
color = Color(1, 0.7058824, 1, 0.5294118)

[node name="AnimationLabel" type="Label" parent="MarginContainer"]
visible = false
layout_mode = 2
text = "currently playing \"movement\" animation"

[node name="HBoxContainer Score" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_constants/separation = 40

[node name="ScoreLabel" type="Label" parent="MarginContainer/HBoxContainer Score"]
unique_name_in_owner = true
layout_mode = 2
text = "SCORE = 0"

[node name="HighscoreLabel" type="Label" parent="MarginContainer/HBoxContainer Score"]
unique_name_in_owner = true
layout_mode = 2
text = "HIGHSCORE = 0"

[node name="HBoxContainer Stats" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/separation = 15

[node name="PlayerSpeedLabel" type="Label" parent="MarginContainer/HBoxContainer Stats"]
unique_name_in_owner = true
layout_mode = 2
text = "PLAYER SPEED= ?"

[node name="PlayerJumpHeightLabel" type="Label" parent="MarginContainer/HBoxContainer Stats"]
unique_name_in_owner = true
layout_mode = 2
text = "PLAYER JUMP HEIGHT= ?"

[node name="IncreaseButton" type="Button" parent="MarginContainer/HBoxContainer Stats"]
layout_mode = 2
focus_mode = 0
text = "INCREASE"

[node name="DecreaseButton" type="Button" parent="MarginContainer/HBoxContainer Stats"]
layout_mode = 2
focus_mode = 0
text = "DECREASE"

[connection signal="pressed" from="MarginContainer/HBoxContainer Stats/IncreaseButton" to="." method="_on_increase_button_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer Stats/DecreaseButton" to="." method="_on_decrease_button_pressed"]
